test/parser/error/err_14_assign_to_const.pl0
program p; 
const c:=1; 
begin 
    c := 2
    //read(c) 
end